# NID-Video

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  data_dt1000ms.yaml  training_perf.yaml
docs/: Findings.md  Idea.md  Paper_outline.md  etl_performance.md  m3_perf.md  m5_10_motion_channel_ablation.md  m5_10_pretrained_ablation.md  m5_10_scale_token_ablation.md  m5_5_baselines.md  m5_baseline_trajectory.md  m6_1_byte_transformer.md  paper_figures_data_schema.md  v1_vs_v2_comparison.md
outputs/: m6.3_cross_paradigm_summary.json
scripts/: baseline_rerun.py  diagnose_unparseable_timestamps.py  download_cicids2017.py  m5_3_rerun.py  plot_helper.py  run_etl.py  run_etl_1d.py  run_split.py  train.py  train_m6_flow_baseline.py
src/nid_video/: __init__.py
src/nid_video/baselines/: __init__.py  byte_transformer.py  flow_feature.py  snapshot_2d.py
src/nid_video/data/: byte_extraction.py  channels.py  dataset.py  etl_pipeline.py  ip_clustering.py  labeling.py  pcap_parser.py  split.py  windowing.py
src/nid_video/models/: _adapters.py  c3d_small_nid.py  convlstm_nid.py  i3d_nid.py  r2plus1d_18_nid.py  timesformer_small_nid.py  videomae_nid.py
src/nid_video/trainer/: evaluator.py  loss.py  metrics_writer.py  scheduler.py  trainer.py
src/nid_video/utils/: __init__.py  config.py  logger.py
tests/: test_byte_extraction.py  test_byte_transformer.py  test_c3d_small_nid.py  test_channels.py  test_convlstm_nid.py  test_dataset.py  test_etl_pipeline.py  test_evaluator.py  test_i3d_nid.py  test_ip_clustering.py  test_labeling.py  test_loss.py  test_metrics_writer.py  test_pcap_parser.py  test_r2plus1d_18_nid.py  test_scheduler.py  test_smoke.py  test_split.py  test_timesformer_small_nid.py  test_train_cli.py  test_trainer.py  test_videomae_nid.py  test_windowing.py
