[project]
name = "nid-video"
version = "0.1.0"
description = "Network intrusion detection via video modeling: pcap -> spatiotemporal tensor -> VideoMAE."
readme = "README.md"
authors = [
    { name = "Henghua Zhang", email = "1652709417@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.43",
    "dpkt>=1.9",
    "einops>=0.7",
    "loguru>=0.7",
    "numpy>=1.26",
    "omegaconf>=2.3",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "pydantic>=2.6",
    "pytorchvideo>=0.1.5",
    "requests>=2.31",
    "safetensors>=0.4",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "timm>=1.0",
    "torch>=2.11.0",
    "torchmetrics>=1.3",
    "torchvision>=0.26.0",
    "tqdm>=4.66",
    "transformers>=4.40",
    "webdataset>=0.2",
    "xxhash>=3.4",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

# --- uv: route torch/torchvision through the official CUDA 13.0 wheel index ---
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: end-to-end tests >1s (ETL pipeline, scapy-built large pcaps); skip with `-m 'not slow'` during dev",
]

# --- ruff ---
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # line length handled by formatter

# --- mypy ---
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.3",
    "scapy>=2.5",
]
